# tidytuesday

./: .gitignore  .pre-commit-config.yaml  README.md  notes.md  pyproject.toml
Emaww_2023/: EDA.R  emaww_data.csv
anime/scripts/: anime_list.Rmd
atla/: README.md  atla.R  atla_eda_duckdb.ipynb  atla_eda_pandas.ipynb
bixi/: README.md  notes.md  preprocessing.py  requirements.txt
bixi/data/: stations.csv
bixi/notebooks/: explore stations.ipynb  longitudinal analysis - monthly usage per station.ipynb  monthly usage.ipynb  yearly station usage.ipynb
boardgames/scripts/: boardgames.Rmd
college_majors/: README.md
college_majors/scripts/: college_majors.Rmd  stem.Rmd  wage.Rmd
federal_research/data/: climate_spending.csv  energy_spending.csv  fed_rd_spending.csv
federal_research/scripts/: federal_research.Rmd
financials_news_sentimentanalysis/: README.md  notes.md
financials_news_sentimentanalysis/notebooks/: Ngrams Vectorizer Classifier.ipynb  baseline models.ipynb  data augmentation - synonym replacement.ipynb  explore.ipynb  transformers test.ipynb  (+5 more)
friends/: README.md  dialogue_nltk.R  friends.R
heartattack/: README.md  requirements.txt
hot100/: README.md  billboard.R
incarcerations/: README.md  gapminder.R  incarcerations.R
mbit/: README.md
mbti/: README.md  requirements.txt
mortality/: README.md  mortality.R
ramen/: ramen.Rmd
sportlogiq_2023/: Tutorial22_Questionnaire.ipynb  Tutorial22_df.csv  Tutorial22_xG_df.csv
survivors/: README.md  notes.md  survivors.R  survivors.Rmd
theoffice/: README.md  dialogue_analysis.R  office.R
(+89 files in other folders)
