[project]
name = "tidytuesday"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "category-encoders>=2.9.0",
    "duckdb>=1.4.4",
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.1.3",
]
