[project]
name = "tidytuesday"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.4.4",
    # "category-encoders>=2.9.0",
    # "duckdb>=1.4.4",
    # "matplotlib>=3.10.8",
    # # "mlflow-skinny>=2.22.0",
    # "mlflow>=3.9.0",
    # # "mlflow>=3.8.1",
    # "notebook>=7.5.3",
    # # "pandas>=3.0.0",
    # # "protobuf>=6.33.5",
    # "pandas>=2.3.3",
    # "protobuf<4.0.0",
    # "scikit-learn>=1.8.0",
    # "xgboost>=3.1.3",
    "llvmlite==0.43.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.9.0",
    "notebook>=7.5.3",
    # "numpy>=1.26.4",
    "numpy<2.0",
    "pandas>=2.3.3",
    # "polars>=1.38.1",
    # "polars-lts-cpu>=1.33.1",
    "plotly>=6.5.2",
    "seaborn>=0.13.2",
    "shap==0.48.0",
]
